--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "customer_cli",
+  "name": "customer-cli",
   "version": "1.0.0",
   "description": "Customer Management CLI",
   "main": "app.js",
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^7.2.0",
+    "dotenv": "^10.0.0",
     "inquirer": "^8.0.0",
     "mongoose": "^5.12.8"
   }
